"cookieman": {       "version": "1.0.0",       "from": "git+ssh://git@github.com:qubitdigital/cookieman.git",       "resolved": "git+ssh://git@github.com:qubitdigital/cookieman.git#b66cea7f222c7dc6939b6c23d06b2922daa8bff0"     },

--- a/config/default.yml
+++ b/config/default.yml
@@ -1,4 +1,9 @@
 port: 3000
+db:
+  user: root
+  password: password
+  host : 127.0.0.1
+  database: todo
 options:
   auth_token: open_says_me
   dateFormat: YYYY-MM-DD
