--- a/package.json
+++ b/package.json
@@ -1,50 +1,11 @@
 {
-  "name": "backbone",
-  "version": "1.0.0",
-  "main": "./app",
-  "scripts": {
-    "start": "make start"
-  },
+  "private": true,
   "dependencies": {
-    "body-parser": "^1.10.0",
-    "config": "^1.9.0",
-    "cookie-parser": "^1.3.3",
-    "express": "^4.10.4",
-    "express-status": "git+ssh://git@bitbucket.org/QuBitProducts/express-status.git",
-    "js-yaml": "^3.2.3",
-    "lodash": "^2.4.1",
-    "longjohn": "^0.2.4",
-    "mocha": "^2.0.1",
-    "mysql": "^2.5.3",
-    "node-statsd": "^0.1.0",
-    "ramda": "^0.8.0",
-    "raven": "^0.7.2",
-    "sentry": "^0.1.2",
-    "underscore": "^1.7.0",
-    "when": "^3.6.3",
-    "which": "^1.0.8",
-    "winston": "^0.8.3",
-    "winston-sentry": "0.0.6"
-  },
-  "devDependencies": {
-    "blanket": "^1.1.6",
-    "buster-assertions": "^0.10.4",
-    "buster-evented-logger": "^0.4.5",
-    "buster-format": "^0.5.6",
-    "buster-test": "^0.7.11",
-    "chai": "^1.10.0",
-    "chai-as-promised": "^4.1.1",
-    "jscs": "^1.8.1",
-    "jshint": "^2.5.10",
-    "mocha": "^2.0.1",
-    "mocha-jenkins-reporter": "^0.1.3",
-    "mocha-spec-cov": "0.0.3",
-    "nock": "^0.51.0",
-    "node-inspector": "^0.8.1",
-    "nodemon": "^1.2.1",
-    "request": "^2.50.0",
-    "sinon": "^1.12.1",
-    "sinon-chai": "^2.6.0",
-    "which": "^1.0.8"
+    "backbone": "^1.1.2",
+    "backbone.localstorage": "^1.1.16",
+    "jquery": "^2.1.3",
+    "todomvc-app-css": "^1.0.0",
+    "todomvc-common": "^1.0.1",
+    "underscore": "^1.7.0"
   }
 }
