--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "dependencies": {
     "backbone": "^1.1.2",
     "backbone.localstorage": "^1.1.16",
+    "body-parser": "^1.12.0",
+    "bookshelf": "^0.7.9",
+    "express": "^4.11.2",
     "jquery": "^2.1.3",
+    "knex": "^0.7.3",
+    "mysql": "^2.5.4",
     "todomvc-app-css": "^1.0.0",
     "todomvc-common": "^1.0.1",
     "underscore": "^1.7.0"
